switched to flow root. Fix those damn overflow bugs

--- a/src/com/content-common/common.less
+++ b/src/com/content-common/common.less
@@ -9,7 +9,8 @@
 #content .content-common {
 	position: relative;
 
-	overflow: hidden;
+	/*overflow: hidden;*/
+	position: flow-root;
 	overflow-wrap: break-word;
 	hyphens: auto;
 
